-
Bug
-
Resolution: Done
-
P1: Critical
-
5.4.0
-
Different linux variants, like Red Hat Enterprise 6 / 7, openSUSE 13.2 / ...
-
64c6bfd1f45f532ea32de49431b66e03e7593f01
Program received signal SIGSEGV, Segmentation fault.
[Switching to Thread 0x7ffff25a2700 (LWP 15673)]
0x00007ffff6fc2515 in ?? () from /local/cullmann/build/aisee4.default.O0/usr/bin/libQt5Gui.so.5
(gdb) bt
#0 0x00007ffff6fc2515 in ?? () from /local/cullmann/build/aisee4.default.O0/usr/bin/libQt5Gui.so.5
#1 0x00007ffff6faa394 in ?? () from /local/cullmann/build/aisee4.default.O0/usr/bin/libQt5Gui.so.5
#2 0x00007ffff6fa9dde in ?? () from /local/cullmann/build/aisee4.default.O0/usr/bin/libQt5Gui.so.5
#3 0x00007ffff6d9fa77 in QTextEngine::shapeTextWithHarfbuzzNG(QScriptItem const&, unsigned short const*, int, QFontEngine*, QVector<unsigned int> const&, bool) const () from /local/cullmann/build/aisee4.default.O0/usr/bin/libQt5Gui.so.5
#4 0x00007ffff6da352b in QTextEngine::shapeText(int) const () from /local/cullmann/build/aisee4.default.O0/usr/bin/libQt5Gui.so.5
#5 0x00007ffff6da41db in QTextEngine::shape(int) const () from /local/cullmann/build/aisee4.default.O0/usr/bin/libQt5Gui.so.5
#6 0x00007ffff6db7cd7 in QTextLine::layout_helper(int) () from /local/cullmann/build/aisee4.default.O0/usr/bin/libQt5Gui.so.5
#7 0x00007ffff6db8b1b in QTextLine::setLineWidth(double) () from /local/cullmann/build/aisee4.default.O0/usr/bin/libQt5Gui.so.5
For Gerrit Dashboard: QTBUG-43850 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
103912,2 | Make harfbuzz-old fallback available at run-time | 5.4.1 | qt/qtbase | Status: MERGED | +2 | 0 |
103989,2 | Fix crash with multi threaded QFont/QTextEngine usage | 5.4.1 | qt/qtbase | Status: MERGED | +2 | 0 |
104388,4 | Force Harfbuzz-NG to use the Qt atomics when built inside Qt | 5.4.1 | qt/qtbase | Status: MERGED | +2 | 0 |